--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>Tickitz Film</title>
+    <title>%REACT_APP_WEBSITE_NAME%</title>
   </head>
   <body>
     <div className="overlay d-none d-lg-none" id="overlay"></div>
