--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <title>%REACT_APP_WEBSITE_NAME%</title>
   </head>
   <body>
-    <div className="overlay d-none d-lg-none" id="overlay"></div>
+    <!-- <div className="overlay d-none d-lg-none" id="overlay"></div> -->
     <div id="root"></div>
 
     <script
